[package]
name = "cabo-os"
authors = ["Matthew Builes, Lucas Hollinger, Joshua Bello"]

[profile.release]
lto = true

[[bin]]
name = "kernel"
path = "main.rs"

##--------------------------------------------------------------------------------------------------
## Dependencies
##--------------------------------------------------------------------------------------------------

[dependencies]
